# eigsep_corr

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  eigsep_fengine_1g_v1_0_2022-08-26_1007.fpg  eigsep_fengine_1g_v2_1_2023-10-02_1655.fpg  eigsep_fengine_1g_v2_1_2023-10-05_1148.fpg  eigsep_fengine_1g_v2_2_2023-10-06_1806.fpg  golden_1g_v1_0_2023-10-05_1126.fpg  pyproject.toml  release-please-config.json  requirements.txt  setup.cfg
.github/workflows/: ci.yml  claude-code-review.yml  push.yml  release-please.yml
docs/: Correlator Notes.docx  dhcp-notes.docx  rpi-notes.docx
eigsep_corr/: __init__.py  blocks.py  config.py  fpga.py  gain_cal.py  io.py  plot.py  redis.py  test_fpga.py  testing.py  utils.py
eigsep_corr/config/: config.yaml
eigsep_corr/data/: __init__.py
eigsep_corr/data/gain_cal/box_fem/: buck_with_antenna_atten0.npz  ps_with_antenna_atten0.npz
eigsep_corr/data/gain_cal/fem/: 012.npz  032.npz  320.npz  348.npz
eigsep_corr/data/gain_cal/fiber/: 1.npz  2.npz  3.npz  4.npz  5.npz
eigsep_corr/data/gain_cal/pam/: 375.npz  376.npz  377.npz  378.npz
eigsep_corr/data/gain_cal/power/: powerbuck_east.npz
eigsep_corr/data/gain_cal/snap/: C000091.npz
eigsep_corr/tests/: test_fpga.py  test_io.py
gain_calibration/: Box Fem.ipynb  Untitled.ipynb  gain_calibration.ipynb  gain_calibration_july24.ipynb  gain_calibration_oct24.ipynb  plot_spectra.py
gain_calibration/data/: fem12_east.npz  fem333_east.npz  fem348_east.npz  fem348_north.npz
gain_calibration/data/box_fem/: buck_no_antenna_atten8.npz  buck_with_antenna_atten8.npz  buck_with_antenna_filters_10dB.npz  ps_with_antenna_filters_10dB.npz
gain_calibration/data/fem/: fem320_north.npz
gain_calibration/data/fiber/: fiber2_east.npz  fiber4_east.npz  fiber4_north.npz  fiber5_north.npz  fiber_a1.npz
gain_calibration/data/july24/box_fem/: buck_with_antenna_atten15.npz  ps_with_antenna_atten15.npz  ps_with_antenna_atten8.npz
gain_calibration/data/july24/fem/: fem012_north.npz
gain_calibration/data/july24/fiber/: fiber1_north.npz  fiber2_north.npz  fiber3_east.npz  fiber3_north.npz  fiber5_east.npz
gain_calibration/data/july24/pam/: pam376_north.npz  pam377_east.npz  pam377_north.npz
gain_calibration/data/july24/power/: powerbuck_north.npz  powerps_north.npz
gain_calibration/data/oct24/fem/: fem012_north.npz  fem032_east.npz  fem032_north.npz  fem320_east.npz  fem320_north.npz  fem348_east.npz  fem348_north.npz
gain_calibration/data/oct24/fiber/: fiberA.npz  fiberA2.npz  (+21 more)
gain_calibration/data/pam/: pam292_east.npz  pam375_east.npz  pam375_north.npz  pam376_east.npz  pam376_north.npz  pam378_east.npz  pam378_north.npz
gain_calibration/data/power/: powerps_east.npz
gain_calibration/impedance/: EIGSEPBIG.csv  EIGSEPSMALL.csv
gain_calibration/impedance/.ipynb_checkpoints/: Impedance-checkpoint.ipynb
notebooks/: Untitled.ipynb  noise_load.ipynb
scripts/: capture_spectrum.py  demo_init.py  observe.py  plotter.py  read_imu.py  sync_time.py  test_fpga.py  test_fpga_noise.py
scripts/data/: fem032_east.npz  fem032_north.npz  fem320_east.npz
snap_fengines/: eigsep_fengine_1g_v2_0_2023-09-30_1811.fpg
transmitter/: Untitled.ipynb  delta_func2.npz  delta_function.npz  offline.npz  split_func2.npz
(+37 files in other folders)
