[metadata]
name = eigsep_corr
version = 0.0.1
description = Software to control EIGSEP correlator on SNAP
url = https://github.com/EIGSEP/eigsep_corr
author = Christian Hellum Bye
author_email = chbye@berkeley.edu

[options]
python_requires = >= 3.9
packages = find:
include_package_data = True


[flake8]
ignore = E203, W503
per-file-ignores =
    __init__.py:F401
max-line-length = 79
