[metadata]
name = eigsep_corr
version = 1.0.0
description = Software to control EIGSEP correlator on SNAP
url = https://github.com/EIGSEP/eigsep_corr
author = Christian Hellum Bye
author_email = chbye@berkeley.edu

[options]
python_requires = >= 3.9
packages = find:
install_requires = 
    numpy
    matplotlib
    redis

[options.package_data]
eigsep_corr =
    data/*.fpg
    data/gain_cal/**

[options.extras_require]
dev =
    black
    fakeredis
    flake8
    pytest
    pytest-cov

[flake8]
ignore = E203, W503
per-file-ignores =
    __init__.py:F401
    io.py:E402, F401, F403
max-line-length = 79
